# mtg-vectors

./: main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-release.yml
docs/: MISSING.md
src/: cli.py  constants.py  icons.py  schema.py  utils.py  watermarks.py
src/_cli/: build.py  test.py
src/commands/: __init__.py  build.py  test.py
